Move core to JUnit6